# session-tracker

./: .env.example  .gitignore  .mcp.json  AGENTS.md  BUILD_NOTES.md  CLAUDE.md  QUICKSTART.md  README.md  _tracker.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: cli.py  data.py  db.py  embeddings.py  eval.py  graph.py  guardrails.py  main.py  mcp_server.py  models.py  observability.py  repository.py  tools.py
cli/: pyproject.toml  sess.py
frontend/app/: page.tsx
