[project]
name = "trackden-backend"
version = "0.1.0"
description = "Trackden API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.69",
    "python-dotenv>=1.0",
    "langgraph>=1.2.9",
    "langchain>=1.3.14",
    "langchain-anthropic>=1.4.8",
    "sqlalchemy>=2.0.51",
    "psycopg[binary]>=3.3.4",
    "mcp>=1.28.1",
    "typer>=0.27.0",
    "fastembed>=0.8.0",
    "pgvector>=0.5.0",
    "langfuse>=4.14.0",
]

[project.scripts]
trackden = "app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
